[package]
name = "pg_base58"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_base58"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg_test = []

[dependencies]
pgrx = "=0.12.1"
bs58 = "0.5.1"

[dev-dependencies]
pgrx-tests = "=0.12.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
